# queens_solver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: github-actions-ci-cd.yaml  upload-pypi.yaml
docs/: conf.py  index.html  index.rst
docs/_templates/: versions.html
master/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
master/.doctrees/: environment.pickle  index.doctree
master/_modules/: index.html
master/autoapi/: index.html
queens_solver/: __init__.py  browser.py  main.py  parser.py  setup.py  solver.py  utils.py  validator.py
tests/: test_run.py
v0.1.15/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.1.15/.doctrees/: environment.pickle  index.doctree
v0.1.15/_modules/: index.html
v0.1.15/autoapi/: index.html
v0.1.16/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.1.16/.doctrees/: environment.pickle  index.doctree
v0.1.16/_modules/: index.html
v0.1.16/autoapi/: index.html
v0.1.17/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.1.18/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.1.19/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.1.20/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.1.21/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
v0.1.22/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
(+224 files in other folders)
