[project]
name = "queens-slvr"
version = "0.1.16"
authors = [
  { name="Xiurui Zhu", email="zxr6@163.com" },
]
description = "Solver for Queens game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "numpy>=2.4.4",
    "playwright>=1.59.0",
    "scipy>=1.17.1",
    "sphinx<9.0.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-multiversion>=0.2.4",
    "sphinx-rtd-theme>=3.1.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.15.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
queens-solver = "queens_solver.main:run"
install-playwright-browsers = "queens_solver.setup:install_playwright_browsers"

[project.urls]
Homepage = "https://github.com/zhuxr11/queens_solver"
Issues = "https://github.com/zhuxr11/queens_solver/issues"
Documentation = "https://zhuxr11.github.io/queens_solver"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["queens_solver"]

[tool.ruff.lint]
select = ["I", "E", "F", "B", "U"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
